--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 .App {
-  margin:0px auto;
-  display:grid;
-  grid-template-columns: 1fr 1fr 1fr;
-   
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 
